--- a/Chapter 5 - Functions.vcxproj
+++ b/Chapter 5 - Functions.vcxproj
@@ -26,7 +26,13 @@
     <ClCompile Include="Lab_Exercise_15_2.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="Lab_Exercise_16.c" />
+    <ClCompile Include="Lab_Exercise_16.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Lab_Exercise_17_1.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Lab_Exercise_17_2.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="function.h" />
