--- a/Chapter 5 - Functions.vcxproj.filters
+++ b/Chapter 5 - Functions.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Lab_Exercise_17_2.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Lab_Exercise_17_3.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="function.h">
