--- a/Chapter 5 - Functions.vcxproj
+++ b/Chapter 5 - Functions.vcxproj
@@ -32,7 +32,12 @@
     <ClCompile Include="Lab_Exercise_17_1.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="Lab_Exercise_17_2.c" />
+    <ClCompile Include="Lab_Exercise_17_2.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Lab_Exercise_17_3.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="function.h" />
